2009-09-22  Olivier Berten  <olivier.berten@gmail.com>

 * swatchbook/codecs.py,swatchbook/icc.py:
   Fixed opening binary files on Windows

2009-09-19  Olivier Berten  <olivier.berten@gmail.com>

 * swatchbooker.pyw,swatchbook/__init__.py,swatchbook/codecs.py,swatchbook/color.py:
   Bugfixes
 * New release: SwatchBooker 0.4

2009-09-16  Olivier Berten  <olivier.berten@gmail.com>

 * swatchbooker.pyw,swatchbook/codecs.py,swatchbook/color.py:
   Color management almost done
 * swatchbook/codecs.py:
   Changed sbz xml in order to reflect the internal structure
 * swatchbook/icc.py,swatchbook/codecs.py:
   Back to files for using with lcms
 * icons/swatchbooker.svg:
   Added shadows

2009-03-20  Olivier Berten  <olivier.berten@gmail.com>

 * swatchbook/codecs.py,swatchbook/color.py:
   Getting further with color management
 * swatchbook/codecs.py:
   New file format (sbz)
 * swatchbook/__init__.py,swatchbook/codecs.py:
   New id management
 * swatchbook/icc.py,swatchbook/codecs.py:
   Profiles as stream instead of files

2009-01-23  Olivier Berten  <olivier.berten@gmail.com>

 * swatchbooker.pyw:
   Some prerequisites for color management

2009-01-23  Olivier Berten  <olivier.berten@gmail.com>

 * swatchbook/codecs.py:
   Fixed some bugs
 * swatchbooker.pyw:
   Editing features
 * New release: SwatchBooker 0.3

2008-12-03  Olivier Berten  <olivier.berten@gmail.com>

 * swatchbook/__init__.py:
   New internal format
 * swatchbook/codecs.py:
   Added OpenOffice.org format (read/write)
 * swatchbooker.pyw:
   Replaced icons with menus
   Added license field
 * New release: SwatchBooker 0.2


2008-11-05  Olivier Berten  <olivier.berten@gmail.com>

 * swatchbook/codecs.py:
   Changed 6CLR to PC6 for easier xml compliance
   Fixed Corel values for PC6


2008-11-04  Olivier Berten  <olivier.berten@gmail.com>

 * swatchbook/codecs.py:
   Added ICC NCP format (read)
   Support more than one extension for each format
   Fixed a bug in ASE write function